fix #1229 center contribution instruction on mobile

--- a/web/src/components/pages/contribution/contribution.css
+++ b/web/src/components/pages/contribution/contribution.css
@@ -186,6 +186,10 @@
         font-style: italic;
         color: var(--near-black);
 
+        @media (--sm-down) {
+            text-align: center;
+        }
+
         @media (--md-up) {
             margin-top: 4vh;
             margin-bottom: 20px;
